# portal2-playtest-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  example.env  release.toml
.cargo/: config.toml
.github/workflows/: release.yml
SURVEY/: bug_report.json  default.json
assets/: survey.vdf
assets/survey/: bug_report.json  config.json  default.json  vista_generic.json
crates/custom_windows/: Cargo.toml
crates/custom_windows/src/: debug_win.rs  engine_api_demo.rs  fogui.rs  lib.rs  toasts.rs
crates/custom_windows/src/survey/: bug_report.rs  form_shared.rs  mod.rs  save_files.rs  survey.rs  types.rs  utils.rs
crates/d3d9-proxy/: Cargo.toml
crates/d3d9_hook_core/: Cargo.toml
crates/d3d9_hook_core/src/: lib.rs
crates/egui_backend/src/: app.rs  lite.rs  state.rs
crates/feedback-server/: Cargo.toml
crates/feedback-server/src/: discord_bot.rs  file_manager.rs  http_server.rs  main.rs  models.rs  state.rs
crates/injector_d3d9_proxy/src/: lib.rs
crates/injector_server_plugin/: Cargo.toml
crates/injector_server_plugin/src/: lib.rs
crates/overlay-ui/: Cargo.toml
crates/overlay-ui/src/: lib.rs
crates/overlay-ui/src/survey/: bug_report.rs  mod.rs  survey.rs
crates/overlay_runtime/: Cargo.toml
crates/overlay_runtime/src/: lib.rs  logger.rs
crates/overlay_runtime/src/logger/: mod.rs
crates/portal2-sdk/: Cargo.toml  README.md
crates/portal2-sdk/src/: entities.rs  lib.rs  server.rs  server_tools.rs
crates/portal2-sdk/src/types/: keyvalues.rs  math.rs  mod.rs  opaque.rs  player.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/source-sdk/src/: game_events.rs  lib.rs  types.rs
crates/source-sdk/src/types/: entity.rs
