[package]
name = "custom_windows"
publish.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
egui.workspace = true
log.workspace = true
windows.workspace = true
source-sdk.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
ureq = { version = "2.9.6", features = ["json"] }
