[package]
name = "custom_windows"
publish.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
egui.workspace = true
log.workspace = true
windows.workspace = true
portal2-sdk.workspace = true

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
ureq = { version = "3.3", features = ["json", "win-system-proxy"] }
egui-notify = "0.19.0"
recorder = { path = "../recorder" }
zip = "8.4.0"
overlay_types.workspace = true
source-fs = "0.3.0"
source-vmt = { version = "0.3.0", features = ["material_system"] }
