[package]
name = "d3d9-proxy"
publish.workspace = true
edition.workspace = true
version.workspace = true
repository = "https://github.com/LaVashikk/portal2-playtest-tool"

[package.metadata.dist]
dist = true
[[package.metadata.dist.assets]]
path = "../../SURVEY/"
dest-path = "Portal 2/SURVEY"


[lints]
workspace = true

[lib]
name = "d3d9"
crate-type = ["cdylib"]

[dependencies]
egui.workspace = true
egui-d3d9.workspace = true
windows.workspace = true
engine-api.workspace = true
overlay-ui.workspace = true

log = "0.4.22"
simplelog = "0.12.2"
