[package]
name = "feedback-server"
publish.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenv = "0.15"
tower-http = { version = "0.6.6", features = ["fs"] }
tower = "0.5.2"

[lints]
workspace = true
